# Multiness_public

./: .gitignore  .gitmodules  AUTHORS  README.md  init_thirdparty.sh
projects/: Core.vcxproj  Core.vcxproj.filters  Language.vcxproj  Podfile  RakNet.vcxproj  RakNet.vcxproj.filters  Win32.vcxproj  Win32.vcxproj.filters  language.vcproj  nestopia.sln  nestopia.vs2008.sln  win32.vcproj
projects/WinRT/: nestopiaWinRT.sln
projects/android/: build.gradle  debug.keystore  feature_graphics2.xcf  keystore.properties
projects/android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
projects/android/app/src/androidTest/java/com/hqgame/networknes/: ApplicationTest.java
projects/android/app/src/gpg/res/layout/: page_internet_multiplayer.xml
projects/android/app/src/gpg/res/layout-port/: page_internet_multiplayer.xml
projects/android/app/src/gpg/res/values/: ids.xml  strings.xml
projects/android/app/src/gpg/res/values-vi/: strings.xml
projects/android/app/src/main/: AndroidManifest.xml
projects/android/app/src/main/assets/: AB_button._png  AB_button_highlight._png  A_button._png  A_button_highlight._png  B_button._png  B_button_highlight._png  dpad._png  dpad_down_highlight._png  dpad_up_highlight._png  start_highlight._png
projects/android/app/src/main/assets/shaders/: 2xbr.glslf  2xbr.glslv  4xbr.glslf  4xbr.glslv  crt cgwg fast.glslf  crt cgwg fast.glslv  crt hyllian.glslf  crt hyllian.glslv  hq2x.glslf  hq2x.glslv  hq4x.glslf  hq4x.glslv  scanline.glslf  scanline.glslv  xbr lv2 fast.glslf  xbr lv2 fast.glslv  xbr lv2.glslf  xbr lv2.glslv
projects/android/app/src/main/java/com/hqgame/networknes/: AsyncOperation.java  AsyncQuery.java  BaseActivity.java  BaseFileListingPage.java  BaseInvitationsPage.java  BaseMenuPage.java  BasePage.java  ButtonsLayoutPage.java  CheatsPage.java  ControllerMappingPage.java  CreditsPage.java  FBInvitationsPage.java  FBUtils.java  FileListingTask.java  GLUtils.java  GameChatDialog.java  GameChooserPage.java  GamePage.java  GameSurfaceView.java  Global.java  GoogleInvitationsPage.java  GooglePlayGamesMatchHandler.java  InternetMultiplayerPage.java  LanServerChooserPage.java  LicensePage.java  LoadSaveFilePage.java  LobbyPage.java  MainPage.java  ManualGameChooserPage.java  NesMachineEvent.java  NesMachineResult.java  QueryCallback.java  SaveGamePage.java  Security.java  Settings.java  SettingsPage.java  UniqueArray.java  Utils.java  WifiDirectServerChooserPage.java  WifiDirectUtils.java
projects/android/app/src/main/jni/: miniupnpcstrings.h
projects/android/app/src/main/jni/ndk_headers_wrapper/asm/: io.h
projects/android/app/src/main/res/anim/: page_enter.xml  page_exit.xml  page_pop_enter.xml  page_pop_exit.xml
projects/android/app/src/main/res/drawable/: actionbar_logo_drawable.xml  btn_google_signin_dark.xml  desktop_screen_drawable.xml  dpad_icon_drawable.xml  folder_black_drawable.xml  game_controller_2_drawable.xml  games_controller_drawable.xml  play_black_drawable.xml  refresh_drawable.xml  rounded_rect_shape.xml  screen_rotate_drawable.xml  sound_enable_drawable.xml  text_file_drawable.xml  up_black_drawable.xml  vibration_drawable.xml  voice_drawable.xml
projects/android/app/src/main/res/layout/: activity_base.xml  button_editor_help_overlay.xml  chat_dialog.xml  chat_message_item_layout.xml  cheat_edit_dialog_layout.xml  cheat_item_layout.xml  controller_button_map_item_layout.xml  default_toolbar.xml  file_list_item_layout.xml  game_file_item_layout.xml  game_toolbar.xml  invitation_item_layout.xml  invite_friend_ingame_btn.xml  lan_server_item_layout.xml  lobby_room_item_layout.xml  no_game_dialog_content_layout.xml  page_cheats.xml  page_controller_mapping.xml  page_credits.xml  page_default_container.xml  page_file_listing_base.xml  page_game.xml  page_game_chooser.xml  page_internet_multiplayer.xml  page_invitations.xml  page_lan_server_chooser.xml  page_license.xml  page_load_save_file.xml  page_lobby.xml  page_main.xml  page_save_game.xml  page_settings.xml
projects/android/app/src/main/res/layout-port/: game_toolbar.xml  page_game.xml  page_internet_multiplayer.xml  page_main.xml
projects/android/app/src/main/res/menu/: menu_edit_buttons.xml  menu_game.xml  menu_main.xml
projects/android/app/src/main/res/raw/: miniupnp_license  nestopia_license  raknet_license
projects/android/app/src/main/res/values/: colors.xml  ids.xml  strings.xml  styles.xml
projects/android/app/src/main/res/values-vi/: strings.xml
projects/iOS/: AB_button._png  AB_button_highlight._png  A_button._png  A_button_highlight._png  AppDelegate.h  AppDelegate.mm  B_button._png  B_button_highlight._png  Info.plist  InvitationInboxViewController.h  InvitationInboxViewController.mm  SettingsViewController.h  SettingsViewController.m  ViewController.h  ViewController.mm  dpad_left_highlight._png  dpad_right_highlight._png  main.m  miniupnpcstrings.h  nestopiaIOS copy-Info.plist  nestopiaIOS_copy2-Info.plist  select._png  select_highlight._png  start._png
projects/miniupnp_win32_gencode/: miniupnpcstrings.h
projects/nestopia.xcodeproj/: project.pbxproj
raw_resources/: buttons.xcf  dpad.xcf  dpad_highlight.xcf  ic_email_white.xcf  ic_person_add_white.xcf  icon.xcf  icon_gpg.xcf  start_select.xcf  start_select2.xcf
source/RakNetNATServer/: NATCompleteServer.sln  NATCompleteServer.vcproj  (+1 more)
source/core/: CMakeLists.txt  NstApu.cpp  NstApu.hpp  NstBase.hpp  NstCpu.cpp  NstCpu.hpp  NstFrameCompressorCommon.cpp  NstFrameCompressorCommon.hpp  NstFrameCompressorZlib.cpp  NstFrameCompressorZlib.hpp  NstLog.cpp  NstLog.hpp  NstMachine.cpp  NstMachine.hpp  NstPpu.cpp  NstPpu.hpp  NstRemoteEvent.hpp  NstRingBuffer.hpp  NstTracker.cpp  NstTracker.hpp  NstTrackerRewinder.cpp  NstTrackerRewinder.hpp  NstVideoFilterCommon.hpp  NstVideoFilterNone.cpp  NstVideoRenderer.cpp  NstVideoRenderer.hpp  NstXml.cpp
source/core/api/: NstApiCheats.cpp  NstApiCheats.hpp  NstApiEmulator.cpp  NstApiEmulator.hpp  NstApiMachine.cpp  NstApiMachine.hpp  NstApiMemoryStream.hpp  NstApiSound.cpp  NstApiSound.hpp  NstApiVideo.cpp
source/core/input/: NstInpPad.cpp
(+164 files in other folders)
