cmake_minimum_required(VERSION 3.4.1)

set(MY_CFLAGS "-fvisibility=hidden")
set(MY_CPPFLAGS "-std=c++11 -DNO_STD_WCSTOL -Wno-c++11-narrowing -Wno-deprecated-register -Wno-logical-op-parentheses -Wno-bitwise-op-parentheses")

set(MY_INCLUDES .. ../../third-party)

set(MY_SRC_FILES
    
    # Core
    NstApu.cpp
    NstAssert.cpp
    NstCartridge.cpp
    NstCartridgeInes.cpp
    NstCartridgeRomset.cpp
    NstCartridgeUnif.cpp
    NstCheats.cpp
    NstChecksum.cpp
    NstChips.cpp
    NstCore.cpp
    NstCpu.cpp
    NstCrc32.cpp
    NstFds.cpp
    NstFile.cpp
    NstImage.cpp
    NstImageDatabase.cpp
    NstLog.cpp
    NstMachine.cpp
    NstMemory.cpp
    NstNsf.cpp
    NstPatcher.cpp
    NstPatcherIps.cpp
    NstPatcherUps.cpp
    NstPins.cpp
    NstPpu.cpp
    NstProperties.cpp
    NstRam.cpp
    NstSha1.cpp
    NstSoundPcm.cpp
    NstSoundPlayer.cpp
    NstSoundRenderer.cpp
    NstState.cpp
    NstStream.cpp
    NstTracker.cpp
    NstTrackerMovie.cpp
    NstTrackerRewinder.cpp
    NstVector.cpp
    NstVideoFilter2xSaI.cpp
    NstVideoFilterHqX.cpp
    NstVideoFilterNone.cpp
    NstVideoFilterNtsc.cpp
    NstVideoFilterNtscCfg.cpp
    NstVideoFilterScaleX.cpp
    NstVideoFilterxBR.cpp
    NstVideoRenderer.cpp
    NstVideoScreen.cpp
    NstXml.cpp
    NstZlib.cpp

    # API
    api/NstApiBarcodeReader.cpp
    api/NstApiCartridge.cpp
    api/NstApiCheats.cpp
    api/NstApiDipSwitches.cpp
    api/NstApiEmulator.cpp
    api/NstApiFds.cpp
    api/NstApiInput.cpp
    api/NstApiMachine.cpp
    api/NstApiMovie.cpp
    api/NstApiNsf.cpp
    api/NstApiRewinder.cpp
    api/NstApiSound.cpp
    api/NstApiTapeRecorder.cpp
    api/NstApiUser.cpp
    api/NstApiVideo.cpp

    # Board
    board/NstBoardAcclaimMcAcc.cpp
    board/NstBoardAe.cpp
    board/NstBoardAgci.cpp
    board/NstBoardAveD1012.cpp
    board/NstBoardAveNina.cpp
    board/NstBoardAxRom.cpp
    board/NstBoardBandai24c0x.cpp
    board/NstBoardBandaiAerobicsStudio.cpp
    board/NstBoardBandaiDatach.cpp
    board/NstBoardBandaiKaraokeStudio.cpp
    board/NstBoardBandaiLz93d50.cpp
    board/NstBoardBandaiLz93d50ex.cpp
    board/NstBoardBandaiOekaKids.cpp
    board/NstBoardBenshengBs5.cpp
    board/NstBoardBmc110in1.cpp
    board/NstBoardBmc1200in1.cpp
    board/NstBoardBmc150in1.cpp
    board/NstBoardBmc15in1.cpp
    board/NstBoardBmc20in1.cpp
    board/NstBoardBmc21in1.cpp
    board/NstBoardBmc22Games.cpp
    board/NstBoardBmc31in1.cpp
    board/NstBoardBmc35in1.cpp
    board/NstBoardBmc36in1.cpp
    board/NstBoardBmc64in1.cpp
    board/NstBoardBmc72in1.cpp
    board/NstBoardBmc76in1.cpp
    board/NstBoardBmc800in1.cpp
    board/NstBoardBmc8157.cpp
    board/NstBoardBmc9999999in1.cpp
    board/NstBoardBmcA65as.cpp
    board/NstBoardBmcBallgames11in1.cpp
    board/NstBoardBmcCh001.cpp
    board/NstBoardBmcCtc65.cpp
    board/NstBoardBmcFamily4646B.cpp
    board/NstBoardBmcFk23c.cpp
    board/NstBoardBmcGamestarA.cpp
    board/NstBoardBmcGamestarB.cpp
    board/NstBoardBmcGolden190in1.cpp
    board/NstBoardBmcGoldenCard6in1.cpp
    board/NstBoardBmcGoldenGame260in1.cpp
    board/NstBoardBmcHero.cpp
    board/NstBoardBmcMarioParty7in1.cpp
    board/NstBoardBmcNovelDiamond.cpp
    board/NstBoardBmcPowerjoy84in1.cpp
    board/NstBoardBmcResetBased4in1.cpp
    board/NstBoardBmcSuper22Games.cpp
    board/NstBoardBmcSuper24in1.cpp
    board/NstBoardBmcSuper40in1.cpp
    board/NstBoardBmcSuper700in1.cpp
    board/NstBoardBmcSuperBig7in1.cpp
    board/NstBoardBmcSuperGun20in1.cpp
    board/NstBoardBmcSuperHiK300in1.cpp
    board/NstBoardBmcSuperHiK4in1.cpp
    board/NstBoardBmcSuperVision16in1.cpp
    board/NstBoardBmcT262.cpp
    board/NstBoardBmcVrc4.cpp
    board/NstBoardBmcVt5201.cpp
    board/NstBoardBmcY2k64in1.cpp
    board/NstBoardBtl2708.cpp
    board/NstBoardBtl6035052.cpp
    board/NstBoardBtlAx5705.cpp
    board/NstBoardBtlDragonNinja.cpp
    board/NstBoardBtlGeniusMerioBros.cpp
    board/NstBoardBtlMarioBaby.cpp
    board/NstBoardBtlPikachuY2k.cpp
    board/NstBoardBtlShuiGuanPipe.cpp
    board/NstBoardBtlSmb2a.cpp
    board/NstBoardBtlSmb2b.cpp
    board/NstBoardBtlSmb2c.cpp
    board/NstBoardBtlSmb3.cpp
    board/NstBoardBtlSuperBros11.cpp
    board/NstBoardBtlT230.cpp
    board/NstBoardBtlTobidaseDaisakusen.cpp
    board/NstBoardBxRom.cpp
    board/NstBoardCaltron.cpp
    board/NstBoardCamerica.cpp
    board/NstBoardCneDecathlon.cpp
    board/NstBoardCnePsb.cpp
    board/NstBoardCneShlz.cpp
    board/NstBoardCony.cpp
    board/NstBoard.cpp
    board/NstBoardCxRom.cpp
    board/NstBoardDiscrete.cpp
    board/NstBoardDreamtech.cpp
    board/NstBoardEvent.cpp
    board/NstBoardFb.cpp
    board/NstBoardFfe.cpp
    board/NstBoardFujiya.cpp
    board/NstBoardFukutake.cpp
    board/NstBoardFutureMedia.cpp
    board/NstBoardGouder.cpp
    board/NstBoardGxRom.cpp
    board/NstBoardHenggedianzi.cpp
    board/NstBoardHes.cpp
    board/NstBoardHosenkan.cpp
    board/NstBoardIremG101.cpp
    board/NstBoardIremH3001.cpp
    board/NstBoardIremHolyDiver.cpp
    board/NstBoardIremKaiketsu.cpp
    board/NstBoardIremLrog017.cpp
    board/NstBoardJalecoJf11.cpp
    board/NstBoardJalecoJf13.cpp
    board/NstBoardJalecoJf16.cpp
    board/NstBoardJalecoJf17.cpp
    board/NstBoardJalecoJf19.cpp
    board/NstBoardJalecoSs88006.cpp
    board/NstBoardJyCompany.cpp
    board/NstBoardKaiser.cpp
    board/NstBoardKasing.cpp
    board/NstBoardKayH2288.cpp
    board/NstBoardKayPandaPrince.cpp
    board/NstBoardKonamiVrc1.cpp
    board/NstBoardKonamiVrc2.cpp
    board/NstBoardKonamiVrc3.cpp
    board/NstBoardKonamiVrc4.cpp
    board/NstBoardKonamiVrc6.cpp
    board/NstBoardKonamiVrc7.cpp
    board/NstBoardKonamiVsSystem.cpp
    board/NstBoardMagicSeries.cpp
    board/NstBoardMmc1.cpp
    board/NstBoardMmc2.cpp
    board/NstBoardMmc3.cpp
    board/NstBoardMmc4.cpp
    board/NstBoardMmc5.cpp
    board/NstBoardMmc6.cpp
    board/NstBoardNamcot163.cpp
    board/NstBoardNamcot175.cpp
    board/NstBoardNamcot34xx.cpp
    board/NstBoardNanjing.cpp
    board/NstBoardNihon.cpp
    board/NstBoardNitra.cpp
    board/NstBoardNtdec.cpp
    board/NstBoardOpenCorp.cpp
    board/NstBoardQj.cpp
    board/NstBoardRcm.cpp
    board/NstBoardRexSoftDb5z.cpp
    board/NstBoardRexSoftSl1632.cpp
    board/NstBoardRumbleStation.cpp
    board/NstBoardSachen74x374.cpp
    board/NstBoardSachenS8259.cpp
    board/NstBoardSachenSa0036.cpp
    board/NstBoardSachenSa0037.cpp
    board/NstBoardSachenSa72007.cpp
    board/NstBoardSachenSa72008.cpp
    board/NstBoardSachenStreetHeroes.cpp
    board/NstBoardSachenTca01.cpp
    board/NstBoardSachenTcu.cpp
    board/NstBoardSomeriTeamSl12.cpp
    board/NstBoardSubor.cpp
    board/NstBoardSunsoft1.cpp
    board/NstBoardSunsoft2.cpp
    board/NstBoardSunsoft3.cpp
    board/NstBoardSunsoft4.cpp
    board/NstBoardSunsoft5b.cpp
    board/NstBoardSunsoftDcs.cpp
    board/NstBoardSunsoftFme7.cpp
    board/NstBoardSuperGameBoogerman.cpp
    board/NstBoardSuperGameLionKing.cpp
    board/NstBoardSuperGamePocahontas2.cpp
    board/NstBoardTaitoTc0190fmc.cpp
    board/NstBoardTaitoTc0190fmcPal16r4.cpp
    board/NstBoardTaitoX1005.cpp
    board/NstBoardTaitoX1017.cpp
    board/NstBoardTengen.cpp
    board/NstBoardTengenRambo1.cpp
    board/NstBoardTxc.cpp
    board/NstBoardTxcMxmdhtwo.cpp
    board/NstBoardTxcPoliceman.cpp
    board/NstBoardTxcTw.cpp
    board/NstBoardTxRom.cpp
    board/NstBoardUnlA9746.cpp
    board/NstBoardUnlCc21.cpp
    board/NstBoardUnlEdu2000.cpp
    board/NstBoardUnlKingOfFighters96.cpp
    board/NstBoardUnlKingOfFighters97.cpp
    board/NstBoardUnlMortalKombat2.cpp
    board/NstBoardUnlN625092.cpp
    board/NstBoardUnlSuperFighter3.cpp
    board/NstBoardUnlTf1201.cpp
    board/NstBoardUnlWorldHero.cpp
    board/NstBoardUnlXzy.cpp
    board/NstBoardUxRom.cpp
    board/NstBoardVsSystem.cpp
    board/NstBoardWaixing.cpp
    board/NstBoardWaixingFfv.cpp
    board/NstBoardWaixingPs2.cpp
    board/NstBoardWaixingSecurity.cpp
    board/NstBoardWaixingSgz.cpp
    board/NstBoardWaixingSgzlz.cpp
    board/NstBoardWaixingSh2.cpp
    board/NstBoardWaixingZs.cpp
    board/NstBoardWhirlwind.cpp
    board/NstBoardZz.cpp

    # Input
    input/NstInpAdapter.cpp
    input/NstInpBandaiHyperShot.cpp
    input/NstInpBarcodeWorld.cpp
    input/NstInpCrazyClimber.cpp
    input/NstInpDoremikkoKeyboard.cpp
    input/NstInpExcitingBoxing.cpp
    input/NstInpFamilyKeyboard.cpp
    input/NstInpFamilyTrainer.cpp
    input/NstInpHoriTrack.cpp
    input/NstInpKonamiHyperShot.cpp
    input/NstInpMahjong.cpp
    input/NstInpMouse.cpp
    input/NstInpOekaKidsTablet.cpp
    input/NstInpPachinko.cpp
    input/NstInpPad.cpp
    input/NstInpPaddle.cpp
    input/NstInpPartyTap.cpp
    input/NstInpPokkunMoguraa.cpp
    input/NstInpPowerGlove.cpp
    input/NstInpPowerPad.cpp
    input/NstInpRob.cpp
    input/NstInpSuborKeyboard.cpp
    input/NstInpTopRider.cpp
    input/NstInpTurboFile.cpp
    input/NstInpZapper.cpp

    # VS System
    vssystem/NstVsRbiBaseball.cpp
    vssystem/NstVsSuperXevious.cpp
    vssystem/NstVsSystem.cpp
    vssystem/NstVsTkoBoxing.cpp
)


add_library(emucore

            STATIC

            ${MY_SRC_FILES}
            )


target_include_directories(
            emucore 
            
            PRIVATE
            
            ${MY_INCLUDES}
            )

set_target_properties(emucore PROPERTIES COMPILE_FLAGS "${CMAKE_CXX_FLAGS} ${MY_CFLAGS} ${MY_CPPFLAGS}")